--- a/src/style/utils/_variables.scss
+++ b/src/style/utils/_variables.scss
@@ -36,7 +36,7 @@ $grays: (
 // fusv-enable
 
 // scss-docs-start color-variables
-$blue:    #916019 !default; //*custom
+$blue:    #fd7e14 !default; //*custom
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #d63384 !default;
